// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataList renders correctly 1`] = `
<div>
  <v-fade-transition-stub mode="out-in" origin="top center 0">
    <div class="vd-data-list">
      <!---->
      <ul class="vd-data-list-field pl-0 vd-column">
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="Civility" value="" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="Name" value="Dupont" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="First name" value="Paul" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
      </ul>
    </div>
  </v-fade-transition-stub>
</div>
`;

exports[`DataList renders correctly in column mode 1`] = `
<div column="true">
  <v-fade-transition-stub mode="out-in" origin="top center 0">
    <div class="vd-data-list">
      <!---->
      <ul class="vd-data-list-field pl-0 vd-column">
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="Civility" value="" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="Name" value="Dupont" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="First name" value="Paul" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
      </ul>
    </div>
  </v-fade-transition-stub>
</div>
`;

exports[`DataList renders correctly in flex mode 1`] = `
<div>
  <v-fade-transition-stub mode="out-in" origin="top center 0">
    <div class="vd-data-list">
      <!---->
      <ul class="vd-data-list-field pl-0 vd-column vd-flex">
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="Civility" value="" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="Name" value="Dupont" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="First name" value="Paul" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
      </ul>
    </div>
  </v-fade-transition-stub>
</div>
`;

exports[`DataList renders correctly with a title 1`] = `
<div>
  <v-fade-transition-stub mode="out-in" origin="top center 0">
    <div class="vd-data-list">
      <h4 class="mb-3 headline">
        Informations
      </h4>
      <ul class="vd-data-list-field pl-0 vd-column">
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="Civility" value="" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="Name" value="Dupont" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="First name" value="Paul" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
      </ul>
    </div>
  </v-fade-transition-stub>
</div>
`;

exports[`DataList renders correctly with an empty list 1`] = `
<div>
  <v-fade-transition-stub mode="out-in" origin="top center 0">
    <div class="vd-data-list">
      <!---->
      <!---->
    </div>
  </v-fade-transition-stub>
</div>
`;

exports[`DataList renders loading 1`] = `
<div>
  <v-fade-transition-stub mode="out-in" origin="top center 0">
    <datalistloading-stub itemsnumber="2"></datalistloading-stub>
  </v-fade-transition-stub>
</div>
`;

exports[`DataList renders loading 2`] = `
<div>
  <v-fade-transition-stub mode="out-in" origin="top center 0">
    <div class="vd-data-list">
      <!---->
      <ul class="vd-data-list-field pl-0 vd-column">
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="Civility" value="" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="Name" value="Dupont" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
        <li class="vd-data-list-row mb-2">
          <datalistitem-stub label="First name" value="Paul" placeholder="…" class="vd-data-list-item body-1" style="width: 200px;"></datalistitem-stub>
        </li>
      </ul>
    </div>
  </v-fade-transition-stub>
</div>
`;
